--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -39,11 +39,11 @@
     "gulp-pug": "^4.0.1",
     "gulp-rev": "^9.0.0",
     "gulp-rev-replace": "^0.4.4",
-    "gulp-util": "^3.0.8",
     "http-proxy-middleware": "^0.19.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.0",
     "jest": "^24.8.0",
+    "minimist": "^1.2.0",
     "webpack-stream": "^5.2.1"
   },
   "browserslist": [
